--- a/docs/pkgdown.css
+++ b/docs/pkgdown.css
@@ -118,7 +118,7 @@ h6:hover .anchor {
   left: 100%;
   margin-top: -6px;
   margin-left: -1px;
-  border-radius: 0 6px 6px 6px;
+  border-radius: 0 6px 6px;
 }
 
 .dropdown-submenu:hover>.dropdown-menu {
